# whu-textual-analysis

./: .gitignore  README.md  pyproject.toml
exam/: part1.odt
exam/original-files/: Overview_File_Problem_2.csv  Problem_1_template.py  Problem_2_template.py  Problem_3_template.py
exam/original-files/Problem_1_Sample/: 2013-Apr-17-BAC.N-140727993387-Transcript.txt  2013-Apr-25-AMZN.OQ-139339186971-Transcript.txt  2013-Jan-17-BAC.N-137118030967-Transcript.txt  2013-Jul-17-BAC.N-138558829694-Transcript.txt  2013-Jul-24-FB.OQ-140049061003-Transcript.txt  2013-Jul-25-AMZN.OQ-137712068210-Transcript.txt  2013-Oct-24-AMZN.OQ-139066299673-Transcript.txt  2014-Apr-23-FB.OQ-137448671471-Transcript.txt  2014-Apr-24-AMZN.OQ-140443160996-Transcript.txt  2014-Jan-15-BAC.N-138523498996-Transcript.txt  2014-Jan-29-FB.OQ-139655634314-Transcript.txt  2014-Oct-15-BAC.N-137877397872-Transcript.txt  2014-Oct-23-AMZN.OQ-140669099674-Transcript.txt  2014-Oct-28-FB.OQ-140415619254-Transcript.txt  2015-Apr-22-FB.OQ-141043150939-Transcript.txt  (+16 more)
exam/part2_problem1/: Overview_File_Problem_1.csv  Problem_1_Overview_Calls.csv  problem1_code.py
exam/part2_problems2n3/: Poblem_2b_Top_10_Positive_Answers.csv  Poblem_2b_Top_10_Positive_Answers.odt  Poblem_2b_Top_10_Positive_Answers_UNEDITED.csv  Problem_2a_Percentage_Positive_Words.csv  Problem_2a_Percentage_Positive_Words_UNEDITED.csv  Problem_3a_Market-related_Questions.csv  Problem_3b_Most_Frequent_Trigrams.csv  problem_2_code.py  problem_3_code.py
lectures/: README.md
lectures/programming/: README.md
(+425 files in other folders)
